--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "amadita-loadtest",
+  "name": "Artillery-GBH",
   "version": "1.0.0",
-  "description": "Amadita project related to load test",
+  "description": "The Base Structure for any load test into a project from GBH",
   "main": "index.js",
   "scripts": {
     "test": "artillery -V && Artillery dino",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@git.gbhapps.com:amadita/amadita-loadtest.git"
+    "url": "https://git.gbhapps.com/jdelarosa/artillery-gbh"
   },
   "author": "GBH",
   "license": "ISC",
